kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  labels:
    component: web
spec:
  containers:
    - name: client
      image: localserve
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
