kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localserve
  labels:
    service: localserve
spec:
  selector:
    app: localserve
  ports:
  - targetPort: 80
    port: 80
