kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
spec:
  rules:
  - host: yolokube.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: localserve
            port: 
              number: 80
